<?xml version="1.0"?>
<package format="2">
  <name>face_detection_bridge</name>
  <version>0.0.0</version>
  <description>Bridges between an existing OpenCV-based face detector and new
    vision messages. Treats human faces as another type of detectable object.
  </description>

  <maintainer email="adam@todo.todo">Adam Allevato</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>opencv_apps</depend>
  <depend>vision_msgs</depend>
  <depend>rospy</depend>

  <export></export>
</package>
