<?xml version="1.0"?>
<package format="2">
  <name>face_detector</name>
  <version>0.0.0</version>
  <description>
    OpenCV-based face detector using vision_msgs
  </description>
  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>vision_opencv</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <export></export>
</package>
