<?xml version="1.0"?>
<package>
  <name>tensorflow_inception_imagenet</name>
  <version>0.0.0</version>
  <description>
    Classify camera output using an Inception model pre-trained on ImageNet
    and running in Tensorflow.
  </description>

  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>
  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>vision_msgs</run_depend>

  <export></export>
</package>
